--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,7 @@ compileJava.finalizedBy checkAkitInstall
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
+    implementation 'gov.nist.math:jama:1.0.3'
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
